--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="h-nav1">
         <div class="h-nav2">
             <div class="h-nav-logo">
-                <a href="index.html">123</a>
+                <a href="index.html">美薇亭</a>
             </div>
             <ul class="h-nav-ul">
                 <li class="h-nav-ul-li">
