--- a/index.html
+++ b/index.html
@@ -232,6 +232,135 @@
             </div>
         </div>
     </div>
+    <!-- 第四块内容-->
+    <div class="h-cont-four">
+        <div class="h-cont-two1">
+            <h2>婚礼攻略</h2>
+            <a href="html/w.html">更多> </a>
+        </div>
+        <div class="h-cont-four-cont">
+            <ul class="g-article-lists clear">
+                <li class="g-article-cell">
+                    <a href="javascript:" target="_blank">
+                        <img src="img/h-img/h-bac10.jpg" alt="" class="g-article-img">
+                        <div class="g-article-text">
+                            <p class="g-article-title">奥运冠军CP秦凯&amp;何姿大婚，我们准备好了</p>
+                            <div class="g-article-sign clear">
+                                <span>婚礼摄影</span>
+                            </div>
+                            <p class="g-article-desc">
+                                6.25@西安，完美浪漫等待开启~                                </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="g-article-cell">
+                    <a href="javascript:" target="_blank">
+                        <img src="img/h-img/h-bac11.jpg" alt="" class="g-article-img">
+                        <div class="g-article-text">
+                            <p class="g-article-title">最适合拍婚纱照的北京胡同</p>
+                            <div class="g-article-sign clx">
+                                <span>婚礼摄影</span>
+                            </div>
+                            <p class="g-article-desc">
+                                拍一组老北京味道的婚纱照吧                                </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="g-article-cell">
+                    <a href="javascript:" target="_blank">
+                        <img src="img/h-img/h-bac12.jpg" alt="" class="g-article-img">
+                        <div class="g-article-text">
+                            <p class="g-article-title">婚博会群面影楼，我为什么最后一家都没选？</p>
+                            <div class="g-article-sign clx">
+                                <span>婚礼摄影</span>
+                            </div>
+                            <p class="g-article-desc">
+                                明白自己想要的是什么，这才是最重要的！                                </p>
+                        </div>
+                    </a>
+                </li>
+                <li class="g-article-cell">
+                    <a href="javascript:" target="_blank">
+                        <img src="img/h-img/h-bac13.jpg" alt="" class="g-article-img">
+                        <div class="g-article-text">
+                            <p class="g-article-title">影楼和摄影工作室的6大区别</p>
+                            <div class="g-article-sign clx">
+                                <span>婚礼摄影</span>
+                            </div>
+                            <p class="g-article-desc">
+                                根据需求选择最重要                                </p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <!-- 第五块内容-->
+    <div class="h-cont-five">
+        <div class="h-cont-two1">
+            <h2>媒体报道</h2>
+            <a href="html/w.html">更多> </a>
+        </div>
+        <div class="h-cont-five-cont1">
+            <ul class="h-cont-four-cont2">
+                <li class="h-cont-four-cont3">
+                    <a href="#">
+                        <div class="h-cont-five-cont3-l">
+                            <img src="img/h-img/h-bac14.png" alt=""/>
+                            <p>
+                                《北上广2》剧组细节控邀请婚礼策划公司担任顾问
+                            </p>
+                        </div>
+                        <div class="h-cont-five-cont3-r">
+                            <img src="img/h-img/news01.jpg" alt=""/>
+                        </div>
+                    </a>
+                </li>
+                <li class="h-cont-four-cont3">
+                    <a href="#">
+                        <div class="h-cont-five-cont3-l">
+                            <img src="img/h-img/h-bac15.png" alt=""/>
+                            <p>
+                                良心剧组《北上广2》连系丝带都找专业人士示范
+
+                            </p>
+                        </div>
+                        <div class="h-cont-five-cont3-r">
+                            <img src="img/h-img/news02.jpg" alt=""/>
+                        </div>
+                    </a>
+                </li>
+                <li class="h-cont-four-cont3">
+                    <a href="#">
+                        <div class="h-cont-five-cont3-l">
+                            <img src="img/h-img/h-bac16.png" alt=""/>
+                            <p>
+                                一个婚礼策划公司的互联网化突围
+
+                            </p>
+                        </div>
+                        <div class="h-cont-five-cont3-r">
+                            <img src="img/h-img/news03.jpg" alt=""/>
+                        </div>
+                    </a>
+                </li>
+                <li class="h-cont-four-cont3">
+                    <a href="#">
+                        <div class="h-cont-five-cont3-l">
+                            <img src="img/h-img/h-bac17.png" alt=""/>
+                            <p>
+                                佟大为宣誓“唯一婚礼”的幕后推手，10年后打破“婚庆+互联网”僵局
+
+                            </p>
+                        </div>
+                        <div class="h-cont-five-cont3-r">
+                            <img src="img/h-img/news04.jpg" alt=""/>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
 <!--底部-->
 <div class="h-footer">
