--- a/html/g.html
+++ b/html/g.html
@@ -49,7 +49,7 @@
     <div class="g-crumbs">
         <ul class="g-clx">
             <li>
-                <a href="../index.html" target="_self">首页</a>
+                <a href="javascript:">首页</a>
             </li>
             <li>></li>
             <li>
@@ -81,10 +81,9 @@
         <!--标题-->
         <div class="g-modular-title clear">
             <h2>婚礼摄影</h2>
-            <a href="g/g-Raiders-list.html" target="_self" class="g-modular-link">更多<span>></span></a>
+            <a href="javascript:" class="g-modular-link">更多<span>></span></a>
         </div><!--标题-->
         <!--内容项-->
-        <!--婚礼摄影-->
         <div class="g-modular-container">
             <ul class="g-article-lists clear">
                 <li class="g-article-cell">
@@ -96,8 +95,7 @@
                                 <span>婚礼摄影</span>
                             </div>
                             <p class="g-article-desc">
-                                6.25@西安，完美浪漫等待开启~
-                            </p>
+                                6.25@西安，完美浪漫等待开启~                                </p>
                         </div>
                     </a>
                 </li>
@@ -110,8 +108,7 @@
                                 <span>婚礼摄影</span>
                             </div>
                             <p class="g-article-desc">
-                                拍一组老北京味道的婚纱照吧
-                            </p>
+                                拍一组老北京味道的婚纱照吧                                </p>
                         </div>
                     </a>
                 </li>
@@ -124,8 +121,7 @@
                                 <span>婚礼摄影</span>
                             </div>
                             <p class="g-article-desc">
-                                明白自己想要的是什么，这才是最重要的！
-                            </p>
+                                明白自己想要的是什么，这才是最重要的！                                </p>
                         </div>
                     </a>
                 </li>
@@ -138,8 +134,7 @@
                                 <span>婚礼摄影</span>
                             </div>
                             <p class="g-article-desc">
-                                根据需求选择最重要
-                            </p>
+                                根据需求选择最重要                                </p>
                         </div>
                     </a>
                 </li>
@@ -166,8 +161,7 @@
                                 <span>买买买</span>
                             </div>
                             <p class="g-article-desc">
-                                婚纱还是得选一款适合自己的，扬长避短很重要！
-                            </p>
+                                婚纱还是得选一款适合自己的，扬长避短很重要！                                </p>
                         </div>
                     </a>
                 </li>
@@ -180,8 +174,7 @@
                                 <span>买买买</span>
                             </div>
                             <p class="g-article-desc">
-                                领带怎么系？领结方巾怎么配？这些技能你都get到了吗？
-                            </p>
+                                领带怎么系？领结方巾怎么配？这些技能你都get到了吗？                               </p>
                         </div>
                     </a>
                 </li>
@@ -195,8 +188,7 @@
                             </div>
                             <p class="g-article-desc">
                                 今天美姐给大家梳理一些婚鞋购买干货，
-                                更好地帮大家划分婚鞋选购的优先考虑因素，避免来回纠结。
-                            </p>
+                                更好地帮大家划分婚鞋选购的优先考虑因素，避免来回纠结。                               </p>
                         </div>
                     </a>
                 </li>
@@ -498,6 +490,102 @@
             </ul>
         </div>
     </div><!--婚礼筹划-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 <!--底部-->
 <div class="h-footer">
