贺薇雅  新 Signed-off-by: Prince-L <846212776@qq.com>

--- a/html/h/h-taoxi.html
+++ b/html/h/h-taoxi.html
@@ -56,10 +56,10 @@
             <img src="../../img/h-img/h-bac18.png" alt=" " class="h-main-cont-img1"/>
             <img src="../../img/h-img/h-bac19.png" alt=" " class="h-main-cont-img2"/>
             <div class="h-main-cont-pink-video">
+                <!--<div class="h-main-cont-pink-video1"  data-videosrc="http://img0.easywed.cn/amazing/index/1.mp4"></div>-->
+                <div class="h-main-cont-pink-video1" data-videoSrc="http://img0.easywed.cn/amazing/index/1.mp4">
+                </div>
 
-                <!--<video src="http://img0.easywed.cn/amazing/index/1.mp4"></video>-->
-                <!--<video src="http://img0.easywed.cn/amazing/index/1.mp4"></video>-->
-                <div class="h-main-cont-pink-video1"  data-videosrc="http://img0.easywed.cn/amazing/index/1.mp4"></div>
             </div>
             <div class="h-main-cont-pink-text">
                 <p>N°5，灵感源自香奈儿5号香水。风摇花枝， 波光肆意，繁花漫出围墙， 弯成一拱秘密花园。</p>
@@ -69,13 +69,39 @@
             </div>
         </div>
     </div>
-    <div class="h-main-cont-video">
-        <div class="h-main-cont-video1"></div>
-        <div class="h-main-cont-video2">
-            <div class=""></div>
-        </div>
+    <!--<div class="h-main-cont-video">-->
+        <!--<div class="h-main-cont-video1"></div>-->
+        <!--<div class="h-main-cont-video2">-->
+            <!--<div class="h-main-cont-video3">-->
+                <!--<video src="http://img0.easywed.cn/amazing/index/1.mp4" class="h-main-cont-main-video"></video>-->
+                <!--<div class="h-main-cont-main-video2"></div>-->
+                <!--<div class="h-main-cont-main-video3">-->
+                    <!--<div class="h-main-cont-main-video4"></div>-->
+                <!--</div>-->
+                <!--<span class="h-main-cont-video-span">-->
+                    <!--<img src="../../img/h-img/cha.png" alt=" "/>-->
+                <!--</span>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+</div>
+<div id="video-mask" class='hide pare'>
+    <div class="nav-bar-mini"></div>
+    <div class="center-window">
+        <video  id='mask_video'
+                preload="none"
+                class='video-js vjs-default-skin vjs-big-play-centered'
+                controls
+                poster=""
+                data-setup="{}">
+            <source src="" type="video/mp4">
+        </video>
+        <span class="closeBtn">
+            <img src="http://sa.easywed.cn/dist/images/officialWebsite/TV-list/Cancel.png?1570212" alt="">
+        </span>
     </div>
 </div>
+
 <!--底部-->
 <div class="h-footer">
     <div class="h-footer-cont">
